# Syncify.Web.Server/Features/Recipes/Recipe.cs
@@ -1,6 +1,7 @@
 ﻿using Microsoft.EntityFrameworkCore;
 using Microsoft.EntityFrameworkCore.Metadata.Builders;
 using Syncify.Web.Server.Features.Authorization;
+using Syncify.Web.Server.Features.RecipeIngredients;
 using Syncify.Web.Server.Features.RecipeTags;
 using Syncify.Web.Server.Features.ShoppingLists;
 
@@ -11,21 +12,19 @@ public class Recipe
     public int Id { get; set; }
     public string Name { get; set; } = string.Empty;
 
-    // Updated description to have a max length of 256 characters
     public string? Description { get; set; }
 
-    // New properties
     public int PrepTimeInMinutes { get; set; }
     public int CookTimeInMinutes { get; set; }
     public int Servings { get; set; }
-
-    // Foreign key to associate the recipe with a user
     public int UserId { get; set; }
     public User User { get; set; } = default!;
 
-    // Property for tags
+    public List<RecipeIngredient> Ingredients { get; set; } = new List<RecipeIngredient>();
+
     public List<RecipeTag> Tags { get; set; } = new List<RecipeTag>();
 }
+
 
 public class RecipeEntityConfiguration : IEntityTypeConfiguration<Recipe>
 {
@@ -37,12 +36,9 @@ public class RecipeEntityConfiguration : IEntityTypeConfiguration<Recipe>
             .HasMaxLength(128)
             .IsRequired();
 
-        // Updated description max length to 256 characters
         builder.Property(x => x.Description)
             .HasMaxLength(256)
-            .IsRequired(false); // Optional field
-
-        // Configuring new properties
+            .IsRequired(false);
         builder.Property(x => x.PrepTimeInMinutes)
             .IsRequired();
 
@@ -52,16 +48,14 @@ public class RecipeEntityConfiguration : IEntityTypeConfiguration<Recipe>
         builder.Property(x => x.Servings)
             .IsRequired();
 
-        // Configuring the relationship with the User entity
         builder.HasOne(x => x.User)
             .WithMany(x => x.Recipes)
             .HasForeignKey(x => x.UserId)
-            .OnDelete(DeleteBehavior.Cascade); // Optional: Cascade delete if the user is deleted
-        // Configure the relationship with RecipeTag
+            .OnDelete(DeleteBehavior.Cascade);
+
         builder.HasMany(x => x.Tags)
             .WithOne(x => x.Recipe)
             .HasForeignKey(x => x.RecipeId)
-            .OnDelete(DeleteBehavior.Cascade); // Optional: Cascade delete if the recipe is deleted
+            .OnDelete(DeleteBehavior.Cascade);
     }
-    }
-
+}
