# Syncify.Web.Server/Features/Recipes/RecipeDto.cs
@@ -1,28 +1,47 @@
 ﻿using AutoMapper;
 using FluentValidation;
+using Syncify.Web.Server.Features.RecipeIngredients;
+using Syncify.Web.Server.Features.RecipeTags;
 
 namespace Syncify.Web.Server.Features.Recipes;
 
-// Updated to include new fields and the user's first name
-public record RecipeGetDto(int Id, string Name, string Description, int PrepTimeInMinutes, int CookTimeInMinutes, int Servings, string UserFirstName);
-public record RecipeCreateDto(string Name, string Description, int PrepTimeInMinutes, int CookTimeInMinutes, int Servings, int UserId);
+public record RecipeIngredientDto(int Id, string Name, string Unit, string? Description, int Quantity);
+
+public record RecipeTagDto(int Id, string Name, int RecipeId);
+
+public record RecipeGetDto(int Id, string Name, string Description, int PrepTimeInMinutes, int CookTimeInMinutes, int Servings, string UserFirstName, int UserId, List<RecipeIngredientDto> Ingredients, List<RecipeTagDto> Tags);
+
+public record RecipeCreateDto(string Name, string Description, int PrepTimeInMinutes, int CookTimeInMinutes, int Servings, int UserId, List<RecipeIngredientDto> Ingredients, List<RecipeTagDto> Tags);
+
 
 public class RecipeMappingProfile : Profile
 {
     public RecipeMappingProfile()
     {
         CreateMap<Recipe, RecipeGetDto>()
-            .ForMember(dest => dest.UserFirstName, opt => opt.MapFrom(src => src.User.FirstName)); // Map User's FirstName to UserFirstName
-        CreateMap<RecipeCreateDto, Recipe>();
+            .ForMember(dest => dest.UserFirstName, opt => opt.MapFrom(src => src.User.FirstName))
+            .ForMember(dest => dest.UserId, opt => opt.MapFrom(src => src.UserId))
+            .ForMember(dest => dest.Ingredients, opt => opt.MapFrom(src => src.Ingredients))
+            .ForMember(dest => dest.Tags, opt => opt.MapFrom(src => src.Tags));
+
+        CreateMap<RecipeCreateDto, Recipe>()
+            .ForMember(dest => dest.Ingredients, opt => opt.Ignore())
+            .ForMember(dest => dest.Tags, opt => opt.Ignore());
+
+        CreateMap<RecipeIngredient, RecipeIngredientDto>();
+        CreateMap<RecipeIngredientDto, RecipeIngredient>();
+        CreateMap<RecipeTag, RecipeTagDto>();
+        CreateMap<RecipeTagDto, RecipeTag>();
     }
 }
+
 
 public class RecipeCreateDtoValidator : AbstractValidator<RecipeCreateDto>
 {
     public RecipeCreateDtoValidator()
     {
         RuleFor(x => x.Name).MaximumLength(128).NotEmpty();
-        RuleFor(x => x.Description).MaximumLength(256).NotEmpty(); // Ensure description is capped at 256 characters
+        RuleFor(x => x.Description).MaximumLength(256).NotEmpty();
         RuleFor(x => x.PrepTimeInMinutes).GreaterThan(0).NotEmpty();
         RuleFor(x => x.CookTimeInMinutes).GreaterThan(0).NotEmpty();
         RuleFor(x => x.Servings).GreaterThan(0).NotEmpty();
